--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "workspace/faasm-sys"]
+[submodule "faasm-sys"]
 	path = workspace/faasm-sys
 	url = git@github.com:mfournial/faasm-sys.git
