--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "faasm-sys"]
 	path = workspace/faasm-sys
 	url = git@github.com:mfournial/faasm-sys.git
+[submodule "third-party/faasm"]
+	path = third-party/faasm
+	url = https://github.com/lsds/Faasm
